Feat: add send test email api
